Fixing text alignment problem

--- a/client/static/css/index.css
+++ b/client/static/css/index.css
@@ -62,6 +62,3 @@ h4 {
 #regCard {
     margin-top: 50px;
 }
-#AllItems {
-    text-align: center;
-}
